--- a/static/styles/login1.css
+++ b/static/styles/login1.css
@@ -5,7 +5,7 @@ body{
 	font:600 16px/18px 'Open Sans',sans-serif;
 }
 *,:after,:before{box-sizing:border-box}
-.clearfix:after,.clearfix:before{content:'';display:table}
+.clearfix:after,.clearfix:before{content:'';display:table}-
 .clearfix:after{clear:both;display:block}
 a{color:inherit;text-decoration:none}
 
@@ -13,7 +13,7 @@ a{color:inherit;text-decoration:none}
 	width:100%;
 	margin:auto;
 	max-width:525px;
-	min-height:670px;
+	min-height:800px;
 	position:relative;
 	background:url(https://raw.githubusercontent.com/khadkamhn/day-01-login-form/master/img/bg.jpg) no-repeat center;
 	box-shadow:0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);
@@ -94,7 +94,7 @@ a{color:inherit;text-decoration:none}
 	background:#1161ee;
 }
 .login-form .group label .icon{
-	width:15px;
+	width:15px;-
 	height:15px;
 	border-radius:2px;
 	position:relative;
