--- a/templates/login1.html
+++ b/templates/login1.html
@@ -1,5 +1,5 @@
 <div class="login-wrap">
-  <link rel="stylesheet" href="login1.css">
+	<link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='styles/login1.css') }}">
 	<div class="login-html">
 		<input id="tab-1" type="radio" name="tab" class="sign-in" checked><label for="tab-1" class="tab">Sign In</label>
 		<input id="tab-2" type="radio" name="tab" class="sign-up"><label for="tab-2" class="tab">Sign Up</label>
