--- a/templates/test_report.html
+++ b/templates/test_report.html
@@ -2,7 +2,7 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/test_report.css') }}">
 </head>
 <body>    
-<h1>Test Results</h1>
+<h1>Previous Result reports</h1>
 {% for name in data.keys() %}
 <p>{{name}}</p>
 <div class="container">
