--- a/templates/login1.html
+++ b/templates/login1.html
@@ -46,16 +46,16 @@
     				</div>
             <div class="group">
               <label for="user" class="label">first name</label>
-              <input id="user" type="text" class="input" name="firstname">
+              <input id="first" type="text" class="input" name="firstname">
             </div>
 
             <div class="group">
               <label for="user" class="label">last name</label>
-              <input id="user" type="text" class="input" name="lastname">
+              <input id="last" type="text" class="input" name="lastname">
             </div>
             <div class="group">
               <label for="user" class="label">Age</label>
-              <input id="user" type="number" class="input" name="age">
+              <input id="age" type="number" class="input" name="age">
             </div>
 
     				<div class="group">
