--- a/templates/Welcome_page_patient.html
+++ b/templates/Welcome_page_patient.html
@@ -95,20 +95,8 @@ body{
         <li><a href="/report">New report</a></li>
         <li><a href="/recommenddoctor">Doctors</a></li>
         <li><a href="/edit">Edit details</a></li>
+        <li><a href="/logout">Logout</a></li>
       </ul>
-    <!-- <h1>welcome {{data['username']}}</h1>
-    <p>{{report}}</p>
-    {% if report!='none' %}
-    <h1>Previous Result reports</h1>
-        {% for name in report.keys() %}
-        <p>{{name}}</p>
-        <div class="container">
-        <div class="skills disease" style="width: {{report[name]}};">{{report[name]}}</div>
-        </div>
-        {% endfor %}
-    {% endif %}
-    <a href="/report"><button>generate new report</button></a>
-    <a href="/recommenddoctor"><button> doctor recommendations</button></a> -->
     <div class="container">
         <div class="main-body">
         
@@ -211,6 +199,7 @@ body{
                     </div>
                   </div>
                   <div class="row gutters-sm">
+                    {% if report!=None %}
                     <div class="col-md-6 mb-3">
                       <div class="card h-100">
                         <div class="card-body" style="height: 500px; overflow-y: auto;">
@@ -221,6 +210,7 @@ body{
                             <div class="progress-bar bg-primary" role="progressbar" style="width: {{report[name]}}%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100">{{report[name]}}</div>
                           </div>
                           {% endfor %}
+                        {% endif %}
                         </div>
                       </div>
                     </div>
