--- a/static/styles/Creating_symptoms.css
+++ b/static/styles/Creating_symptoms.css
@@ -66,9 +66,9 @@ input[type='checkbox'] + label > span{
 input[type='checkbox'] + label:hover, input[type='checkbox']:focus + label{
   color: #fff;
 }
-input[type='checkbox'] + label:hover > span, input[type='checkbox']:focus + label > span{
+/* input[type='checkbox'] + label:hover > span, input[type='checkbox']:focus + label > span{
   background: rgba(255,255,255,.1);
-}
+} */
 input[type='checkbox']:checked + label > ins{ height: 100%; }
 
 input[type='checkbox']:checked + label > span{
