--- a/templates/doctors_list.html
+++ b/templates/doctors_list.html
@@ -1,7 +1,39 @@
 <head>
     <link rel="stylesheet" href="{{ url_for('static',filename='styles/doctors_list.css') }}">
+    <style>
+      ul {
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        overflow: hidden;
+        background-color: #333;
+      }
+      
+      li {
+        float: left;
+      }
+      
+      li a {
+        display: block;
+        color: white;
+        text-align: center;
+        padding: 14px 16px;
+        text-decoration: none;
+      }
+      
+      li a:hover:not(.active) {
+        background-color: #111;
+      }
+      
+      .active {
+        background-color: #4CAF50;
+      }
+      </style>
 </head>
 <body>
+  <ul>
+    <li style="float:right;"><a class="active" href="/">Home</a></li>
+  </ul>
     {% for disease,details in doctors.items() %}
         <h2>{{disease}}</h2>
         <div class="tbl-header">
