--- a/static/styles/appointments.css
+++ b/static/styles/appointments.css
@@ -20,7 +20,7 @@ h1{
     border: 1px solid rgba(255,255,255,0.3);
   }
   th{
-    padding: 15px 5px;
+    padding:15px;
     text-align: left;
     font-weight: 500;
     font-size: 12px;
@@ -28,7 +28,7 @@ h1{
     text-transform: uppercase;
   }
   td{
-    padding: 15px 7px;
+    padding: 15px;
     text-align: left;
     vertical-align:middle;
     font-weight: 300;
