--- a/templates/Welcome_page_patient.html
+++ b/templates/Welcome_page_patient.html
@@ -96,6 +96,7 @@ body{
         <li><a href="/recommenddoctor">Doctors</a></li>
         <li><a href="/edit">Edit details</a></li>
         <li><a href="/logout">Logout</a></li>
+        <li><a href="/appointments">Appointments</a></li>
       </ul>
     <div class="container">
         <div class="main-body">
